--- a/metajam_example/HBR_watershed_2.Rmd
+++ b/metajam_example/HBR_watershed_2.Rmd
@@ -112,7 +112,7 @@ HBR_watershed_2_data <- HBR_watershed_2_data %>%
   rename('Spec Cond' = 'SpecCond')	
 
 HBR_watershed_2_data <- HBR_watershed_2_data %>% 
-  rename('DSi' = 'SiO2')
+  rename('Si' = 'SiO2')
 
 ```
 
@@ -217,6 +217,7 @@ Fuzzy matching template solute units table to attribute table
    mutate(watershed_units_2 = attributes$attributeName[amatch(tolower(solute_units_Template$Measurement), tolower(attributes$attributeName), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
 )
 
+fuzzy_match$watershed_units_2 <- gsub("SiO2", "Si", fuzzy_match$watershed_units_2)
 
 ```
 
