--- a/metajam_example/HBR_watershed_3.Rmd
+++ b/metajam_example/HBR_watershed_3.Rmd
@@ -198,6 +198,7 @@ Fuzzy matching template solute units table to attribute table
    mutate(watershed_units_3 = attributes$attributeName[amatch(tolower(solute_units_Template$Measurement), tolower(attributes$attributeName), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
 )
 
+fuzzy_match$watershed_units_3 <- gsub("SiO2", "Si", fuzzy_match$watershed_units_3)
 
 ```
 
