--- a/metajam_example/ADC_toolik_duplicates.Rmd
+++ b/metajam_example/ADC_toolik_duplicates.Rmd
@@ -46,7 +46,6 @@ desired_path_to_data <- "~/SI_river_data"
 # create the folder if it does not exist yet
 dir.create(desired_path_to_data, showWarnings = FALSE)
 
-
 ```
 
 #### Step 4: Download the data by pasting the link you just copied
@@ -65,12 +64,14 @@ downloaded_data <- download_d1_data(data_url = my_data_url, path = desired_path_
 ```{r}
 
 
-my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888", "-999", "-9999"))
+my_data <- read_d1_files(downloaded_data, na = c("-888.88", "-888.888", "-888", "-999", "-9999", "u", "NP"))
 
 Toolik_watershed_data <- my_data$data
 
 #remove 2nd and 3rd rows which were empty
 Toolik_watershed_data <-  Toolik_watershed_data[-c(1, 2, 3),]
+
+my_data$attribute_metadata
 
 ```
 
@@ -101,18 +102,43 @@ Toolik_rivers_watershed <- Toolik_watershed_data %>%
 Toolik_rivers_watershed  <- Toolik_rivers_watershed  %>% 
 add_column('Site/Stream Name' = paste(Toolik_rivers_watershed$River, Toolik_rivers_watershed$Station), .before = 'River')
 
+
 ```
+
+Making a table with comments column so I can add it back later. If I keep the comments column in the datetable R fails to detect duplicate values (because the duplicate has 'ISCO' in the comments field)
 
 ```{r}
 
+#cleaning up duplicates file to share
+Toolik_rivers_watershed_COMMENTS   <- Toolik_rivers_watershed  %>% 
+  select(-'Site Code', -'Station', -'Reach', -'Method / Instrument', -'Units', -'River')  %>% 
+  rename('Sampling Date' = 'Date') 
+
+Toolik_rivers_watershed_COMMENTS  <-  add_column(.data = Toolik_rivers_watershed_COMMENTS, 'Time' = substr(Toolik_rivers_watershed_COMMENTS$`Sampling Date`, 11, 16), .after = 'Sampling Date')
+
+#removing time from sampling date column
+Toolik_rivers_watershed_COMMENTS   <- Toolik_rivers_watershed_COMMENTS  %>% 
+  mutate('Sampling Date' = substr(Toolik_rivers_watershed_COMMENTS$`Sampling Date`, 1, 10))
+
 #distinct df that highlights the duplicates
-Toolik_watershed_with_duplicates <- pivot_wider(Toolik_rivers_watershed, names_from = 'Type', values_from = 'Value')
+Toolik_watershed_with_COMMENTS<- pivot_wider(Toolik_rivers_watershed_COMMENTS, names_from = 'Type', values_from = 'Value')
+
+
+
+```
+
+
+
+```{r}
+
 
 #cleaning up duplicates file to share
-Toolik_watershed_with_duplicates   <- Toolik_watershed_with_duplicates %>% 
-  select(-'Site Code', -'Station', -'Reach', -'Method / Instrument', -'Units', -'River')  %>% 
+Toolik_watershed_with_duplicates   <- Toolik_rivers_watershed %>% 
+  select(-'Site Code', -'Station', -'Reach', -'Method / Instrument', -'Units', -'River', -'Comments')  %>% 
   rename('Sampling Date' = 'Date')
 
+#distinct df that highlights the duplicates
+Toolik_watershed_with_duplicates <- pivot_wider(Toolik_watershed_with_duplicates, names_from = 'Type', values_from = 'Value')
 
 #extracting 'time' from sampling date column and making it it's own column
 Toolik_watershed_with_duplicates   <- add_column(.data = Toolik_watershed_with_duplicates, 'Time' = substr(Toolik_watershed_with_duplicates$`Sampling Date`, 11, 16), .after = 'Sampling Date')
@@ -123,31 +149,79 @@ Toolik_watershed_with_duplicates  <- Toolik_watershed_with_duplicates %>%
 
 #Renaming columns to match template abbreviations
 Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates  %>% 
-  rename('Ca' = 'Calcium', 'Spec Cond' = 'Specific Conductivity', 'Na' = 'Sodium', 'K' = 'Potassium', 'Mg' = 'Magnesium', 'TDP' = 'Total Dissolved Phosphorus', 'DOC' = 'Dissolved Organic Carbon', 'NH4' = 'Ammonium', 'TDN' = 'Total Dissolved Nitrogen', 'Suspended Chl' = 'Sestonic Total Chlorophyll', 'Temp C' = 'Temp when sample collected', 'SRP' = 'Soluble Reactive Phosphorus', 'Cl' = 'Chloride', 'alkalinity' = 'Alkalinity', 'Pb' = 'Lead', 'Fe' = 'Iron', 'SO4' = 'Sulfate', 'Cu' = 'Copper', 'TSS' = 'Total Suspended Sediment', 'CO2' = 'Carbon Dioxide', 'DIC' = 'Dissolved Inorganic Carbon', 'CH4' = 'Methane')
+  rename('Ca' = 'Calcium', 'Spec Cond' = 'Specific Conductivity', 'Na' = 'Sodium', 'K' = 'Potassium', 'Mg' = 'Magnesium', 'TDP' = 'Total Dissolved Phosphorus', 'DOC' = 'Dissolved Organic Carbon', 'NH4' = 'Ammonium', 'TDN' = 'Total Dissolved Nitrogen', 'Suspended Chl' = 'Sestonic Chlorophyll a', 'Temp C' = 'Temp when sample collected', 'SRP' = 'Soluble Reactive Phosphorus', 'Cl' = 'Chloride', 'alkalinity' = 'Alkalinity', 'Pb' = 'Lead', 'Fe' = 'Iron', 'SO4' = 'Sulfate', 'Cu' = 'Copper', 'TSS' = 'Total Suspended Sediment', 'CO2' = 'Carbon Dioxide', 'DIC' = 'Dissolved Inorganic Carbon', 'CH4' = 'Methane', 'NOx' = 'NitrateNitrite')
 
 
-
-Toolik_watershed_with_duplicates2 <- Toolik_watershed_with_duplicates %>% 
-filter(str_detect(alkalinity, pattern = ",")) %>% 
-
-
-Toolik_watershed_with_duplicates3 = sapply(Toolik_watershed_with_duplicates[6:20],
+Toolik_watershed_with_duplicates2 = sapply(Toolik_watershed_with_duplicates[6:20],
               function(x) grep(",", x, value = TRUE))
 
 
-attributes_with_duplicates <- names(Toolik_watershed_with_duplicates3)
+attributes_with_duplicates <- names(Toolik_watershed_with_duplicates2)
+
 
 ```
-Alkalinity
+Cleaning up columns
 
 ```{r}
 
 
-Toolik_watershed_with_duplicates4 <- Toolik_watershed_with_duplicates %>% 
-  separate(alkalinity, c("A", "B", "C"),sep=",")  %>%
-  mutate(alkalinity = mean("A", "B", "C")) 
+Toolik_watershed_with_duplicates$alkalinity <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$alkalinity)
 
-Toolik_watershed_with_duplicates4$alkalinity <- ifelse(is.na(Toolik_watershed_with_duplicates4$alkalinity), Toolik_watershed_with_duplicates4$A, Toolik_watershed_with_duplicates4$alkalinity) 
+Toolik_watershed_with_duplicates$alkalinity <- gsub("c","", Toolik_watershed_with_duplicates$alkalinity)
+
+
+```
+
+
+```{r}
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate(alkalinity, c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'alkalinity' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$alkalinity <- na_if(Toolik_watershed_with_duplicates$alkalinity, 'NaN')
+
+
+
+```
+Ran this multiple times, for each of the attributes listed in "attributes_with_duplicates" vector
+
+NH4
+
+```{r}
+
+
+Toolik_watershed_with_duplicates$'NH4' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'NH4')
+
+Toolik_watershed_with_duplicates$'NH4' <- gsub("c","", Toolik_watershed_with_duplicates$'NH4')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('NH4', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'NH4' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'NH4' <- na_if(Toolik_watershed_with_duplicates$'NH4', 'NaN')
 
 
 ```
@@ -156,11 +230,378 @@ Toolik_watershed_with_duplicates4$alkalinity <- ifelse(is.na(Toolik_watershed_wi
 
 
 
+Toolik_watershed_with_duplicates$'CO2' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'CO2')
+
+Toolik_watershed_with_duplicates$'CO2' <- gsub("c","", Toolik_watershed_with_duplicates$'CO2')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('CO2', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'CO2' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'CO2' <- na_if(Toolik_watershed_with_duplicates$'CO2', 'NaN')
+
+
+```
+```{r}
+
+Toolik_watershed_with_duplicates$'Ca' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Ca')
+
+Toolik_watershed_with_duplicates$'Ca' <- gsub("c","", Toolik_watershed_with_duplicates$'Ca')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Ca', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Ca' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Ca' <- na_if(Toolik_watershed_with_duplicates$'Ca', 'NaN')
+
+
+```
+
+```{r}
+
+Toolik_watershed_with_duplicates$'Mg' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Mg')
+
+Toolik_watershed_with_duplicates$'Mg' <- gsub("c","", Toolik_watershed_with_duplicates$'Mg')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Mg', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Mg' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Mg' <- na_if(Toolik_watershed_with_duplicates$'Mg', 'NaN')
+
+
+```
+```{r}
+
+Toolik_watershed_with_duplicates$'K' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'K')
+
+Toolik_watershed_with_duplicates$'K' <- gsub("c","", Toolik_watershed_with_duplicates$'K')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('K', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'K' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'K' <- na_if(Toolik_watershed_with_duplicates$'K', 'NaN')
+
+```
+
+```{r}
+
+View(attributes_with_duplicates)
+
+```
+
+
+```{r}
+
+Toolik_watershed_with_duplicates$'Na' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Na')
+
+Toolik_watershed_with_duplicates$'Na' <- gsub("c","", Toolik_watershed_with_duplicates$'Na')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Na', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Na' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Na' <- na_if(Toolik_watershed_with_duplicates$'Na', 'NaN')
+
+```
+
+```{r}
+
+Toolik_watershed_with_duplicates$'DOC' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'DOC')
+
+Toolik_watershed_with_duplicates$'DOC' <- gsub("c","", Toolik_watershed_with_duplicates$'DOC')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('DOC', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'DOC' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'DOC' <- na_if(Toolik_watershed_with_duplicates$'DOC', 'NaN')
+
+
+
+```
+
+```{r}
+
+Toolik_watershed_with_duplicates$'CH4' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'CH4')
+
+Toolik_watershed_with_duplicates$'CH4' <- gsub("c","", Toolik_watershed_with_duplicates$'CH4')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('CH4', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'CH4' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'CH4' <- na_if(Toolik_watershed_with_duplicates$'CH4', 'NaN')
+
+
+```
+```{r}
+
+Toolik_watershed_with_duplicates$'NOx' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'NOx')
+
+Toolik_watershed_with_duplicates$'NOx' <- gsub("c","", Toolik_watershed_with_duplicates$'NOx')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('NOx', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'NOx' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'NOx' <- na_if(Toolik_watershed_with_duplicates$'NOx', 'NaN')
+
+
+```
+
+```{r}
+
+
+Toolik_watershed_with_duplicates$'Suspended Chl' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Suspended Chl')
+
+Toolik_watershed_with_duplicates$'Suspended Chl' <- gsub("c","", Toolik_watershed_with_duplicates$'Suspended Chl')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Suspended Chl', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Suspended Chl' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Suspended Chl' <- na_if(Toolik_watershed_with_duplicates$'Suspended Chl', 'NaN')
+
+
+```
+
+```{r}
+
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Carbon' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Sestonic Particulate Carbon')
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Carbon' <- gsub("c","", Toolik_watershed_with_duplicates$'Sestonic Particulate Carbon')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Sestonic Particulate Carbon', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Sestonic Particulate Carbon' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Carbon' <- na_if(Toolik_watershed_with_duplicates$'Sestonic Particulate Carbon', 'NaN')
+
+
+```
+```{r}
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Nitrogen' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Sestonic Particulate Nitrogen')
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Nitrogen' <- gsub("c","", Toolik_watershed_with_duplicates$'Sestonic Particulate Nitrogen')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Sestonic Particulate Nitrogen', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Sestonic Particulate Nitrogen' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Nitrogen' <- na_if(Toolik_watershed_with_duplicates$'Sestonic Particulate Nitrogen', 'NaN')
+
+
+```
+
+```{r}
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Phosphorus' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Sestonic Particulate Phosphorus')
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Phosphorus' <- gsub("c","", Toolik_watershed_with_duplicates$'Sestonic Particulate Phosphorus')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Sestonic Particulate Phosphorus', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Sestonic Particulate Phosphorus' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Sestonic Particulate Phosphorus' <- na_if(Toolik_watershed_with_duplicates$'Sestonic Particulate Phosphorus', 'NaN')
 
 
 ```
 
 
+```{r}
+
+
+	
+
+Toolik_watershed_with_duplicates$'Sestonic Phaeopigment' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Sestonic Phaeopigment')
+
+Toolik_watershed_with_duplicates$'Sestonic Phaeopigment' <- gsub("c","", Toolik_watershed_with_duplicates$'Sestonic Phaeopigment')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Sestonic Phaeopigment', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Sestonic Phaeopigment' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Sestonic Phaeopigment' <- na_if(Toolik_watershed_with_duplicates$'Sestonic Phaeopigment', 'NaN')
+
+
+```
+
+
+
+
+```{r}
+
+Toolik_watershed_with_duplicates$'Silica' <- gsub("[[:punct:]]","", Toolik_watershed_with_duplicates$'Silica')
+
+Toolik_watershed_with_duplicates$'Silica' <- gsub("c","", Toolik_watershed_with_duplicates$'Silica')
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  separate('Silica', c("A", "B", "C"),sep=" ") 
+
+Toolik_watershed_with_duplicates$A <- as.numeric(Toolik_watershed_with_duplicates$A)
+Toolik_watershed_with_duplicates$B <- as.numeric(Toolik_watershed_with_duplicates$B)
+Toolik_watershed_with_duplicates$C <- as.numeric(Toolik_watershed_with_duplicates$C)
+
+
+Toolik_watershed_with_duplicates  <- cbind(Toolik_watershed_with_duplicates ,'Silica' =rowMeans(Toolik_watershed_with_duplicates[5:7], na.rm=TRUE))
+
+
+Toolik_watershed_with_duplicates <- Toolik_watershed_with_duplicates %>% 
+  select(-'A', -'B', -'C')
+
+Toolik_watershed_with_duplicates$'Silica' <- na_if(Toolik_watershed_with_duplicates$'Silica', 'NaN')
+
+
+```
 
 
 Read in template. Doulbe check the template is correct!
@@ -172,6 +613,8 @@ template <- read_excel(here("metajam_example", "Raw stream data template.xlsx"),
   mutate(`Sampling Date` = as.Date(`Sampling Date`))  %>% 
   add_column('Comments' = ' ')
 
+#names(template)
+
 ```
 
 Fuzzy Match
@@ -182,7 +625,142 @@ Fuzzy Match
   # Note that we match the lower case names
   # Note that the weight i= 0.1 says that we will be more likely to match if watershed 1 = template + extra
 (fuzzy_match <- tibble(template = names(template)) %>%
-   mutate(watershed_toolik_all = names(Toolik_watershed_with_duplicates4)[amatch(tolower(template), tolower(names(Toolik_watershed_with_duplicates4)), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
+   mutate(watershed_toolik_all = names(Toolik_watershed_with_duplicates)[amatch(tolower(template), tolower(names(Toolik_watershed_with_duplicates)), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
 )
+
+```
+
+```{r}
+
+
+# Fill in the columns that didn't match, and correct the wrongly corrected matches
+# continue in the same way until you've filled out everything you could.
+  # Note: NA_character_ is just NA but of the character type.
+(lookup_table <- fuzzy_match %>%
+  mutate(watershed_toolik_all = case_when(
+    template %in% c("VSS", "TN", "DIN", "TP", "PO4", "TOC") ~ NA_character_,
+    TRUE ~ watershed_toolik_all)))
+
+lookup_table <- lookup_table %>%
+  filter(!is.na(watershed_toolik_all))
+
+correct_colnames <- lookup_table$template
+
+```
+New data table with only the columns that match the template
+
+```{r}
+
+
+new_datatable_toolik_all <- Toolik_watershed_with_duplicates %>% 
+        select(all_of(c(correct_colnames)))
+
+```
+
+Loading the solute units template
+
+```{r}
+
+
+solute_units_Template <- read_excel(here("metajam_example", "Stream_Data_Template.xlsx"), sheet = "Solute Units" )
+
+solute_units_Template <- solute_units_Template  %>%
+  select(Measurement, Unit)
+
+
+```
+Making a dataframe from the attribute metadata that only inlcudes the columns I need to match the template (attributeName and units)
+
+
+```{r}
+
+attributes <- Toolik_watershed_data %>%
+  select(Type, Units) %>%
+  unique() %>%
+  rename('Measurement' = 'Type')
+
+
+#strip white space
+
+attributes$Measurement <- trimws(attributes$Measurement, which = c("left"))
+
+attributes$Measurement <- gsub("Calcium", "Ca", attributes$Measurement)
+attributes$Measurement <- gsub('Silica', 'Si',attributes$Measurement)
+attributes$Measurement <- gsub('Sodium', 'Na', attributes$Measurement)
+attributes$Measurement <- gsub('Potassium', 'K', attributes$Measurement)
+attributes$Measurement <- gsub('Magnesium', 'Mg', attributes$Measurement)
+attributes$Measurement <- gsub('Carbon Dioxide', 'CO2', attributes$Measurement)
+attributes$Measurement <- gsub('Total Dissolved Phosphorus', 'TDP', attributes$Measurement)
+attributes$Measurement <- gsub('Dissolved Organic Carbon', 'DOC', attributes$Measurement)
+attributes$Measurement <- gsub('Methane', 'CH4', attributes$Measurement)
+attributes$Measurement <- gsub('Ammonium', 'NH4', attributes$Measurement)
+attributes$Measurement <- gsub('Total Dissolved Nitrogen', 'TDN', attributes$Measurement)
+attributes$Measurement <- gsub("Sestonic Chlorophyll a", 'Suspended Chl', attributes$Measurement)
+attributes$Measurement <- gsub("Temp when sample collected", 'Temp', attributes$Measurement)
+attributes$Measurement <- gsub("Specific Conductivity", 'Specific Conductance', attributes$Measurement)
+attributes$Measurement <- gsub("Nickel", 'Ni', attributes$Measurement)
+attributes$Measurement <- gsub("Chloride", 'Cl', attributes$Measurement)
+attributes$Measurement <- gsub("Copper", 'Cu', attributes$Measurement)
+attributes$Measurement <- gsub("Sulfate", 'SO4', attributes$Measurement)
+attributes$Measurement <- gsub('Soluble Reactive Phosphorus', 'SRP', attributes$Measurement)
+attributes$Measurement <- gsub('Total Suspended Sediment', 'TSS', attributes$Measurement)
+attributes$Measurement <- gsub('Dissolved Inorganic Carbon', 'DIC', attributes$Measurement)
+
+
+
+
+```
+
+Fuzzy matching template solute units table to attribute table
+```{r}
+
+(fuzzy_match <- tibble(solute_units_Template$Measurement) %>%
+   mutate(watershed_units = attributes$Measurement[amatch(tolower(solute_units_Template$Measurement), tolower(attributes$Measurement), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
+)
+
+
+```
+
+
+Fuzzy matching template solute units table to attribute table
+```{r}
+
+# Fill in the columns that didn't match, and correct the wrongly corrected matches
+# continue in the same way until you've filled out everything you could.
+  # Note: NA_character_ is just NA but of the character type.
+(lookup_table_units <- fuzzy_match %>%
+  mutate(attributes = case_when(
+    solute_units_Template$Measurement %in% c("Q","DO", "DO%", "TKN", "TOC", "TN", "DON", "TP", "DOP", "PP", "PO4") ~ NA_character_, TRUE ~ watershed_units)))
+
+#Make a string of the correct names
+correct_names <- lookup_table_units$'solute_units_Template$Measurement'
+
+```
+
+```{r}
+
+
+#Make a table that matches the template
+solute_units_table_new <- attributes %>% 
+        filter(Measurement %in% c(correct_names))
+
+```
+
+Export an excel workbook with two sheets
+
+```{r}
+
+
+## setup a workbook with 2 worksheets
+wb <- createWorkbook()
+addWorksheet(wb = wb, sheetName = "Raw Data (Sheet 1)", gridLines = FALSE)
+
+writeDataTable(wb = wb, sheet = 1, x = new_datatable_toolik_all)
+
+addWorksheet(wb = wb, sheetName = "Solute Units (Sheet 2)", gridLines = FALSE)
+
+writeData(wb = wb, sheet = 2, x = solute_units_table_new)
+
+saveWorkbook(wb, "ADC_Toolik_ALL_watershed.xlsx", overwrite = TRUE)
 
 ```
