--- a/metajam_example/HBR_watershed_5.Rmd
+++ b/metajam_example/HBR_watershed_5.Rmd
@@ -192,6 +192,7 @@ Fuzzy matching template solute units table to attribute table
    mutate(watershed_units_5 = attributes$attributeName[amatch(tolower(solute_units_Template$Measurement), tolower(attributes$attributeName), maxDist = 1, weight = c(d=1,i=0.1,s=1,t=1))])
 )
 
+fuzzy_match$watershed_units_5 <- gsub("SiO2", "Si", fuzzy_match$watershed_units_5)
 
 ```
 
