--- a/metajam_example/Joining datatables.Rmd
+++ b/metajam_example/Joining datatables.Rmd
@@ -12,43 +12,49 @@ Import data
 
 library(readr)
 library(readxl)
+library(here)
+library(tidyverse)
+library(knitr)
+library(lubridate)
+library(openxlsx)
 
-ADC_Toolik_ALL_watershed <- ADC_Toolik_ALL_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/ADC_Toolik_ALL_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+ADC_Toolik_ALL_watershed <- ADC_Toolik_ALL_watershed <- read_excel(here::here("metajam_example/ADC_Toolik_ALL_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_1_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_1_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL)) 
+HBR_1_watershed <- read_excel(here::here("metajam_example/HBR_1_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL)) 
 
-HBR_2_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_2_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_2_watershed <- read_excel(here::here("metajam_example/HBR_2_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_3_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_3_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_3_watershed <- read_excel(here::here("metajam_example/HBR_3_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_4_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_4_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_4_watershed <- read_excel(here::here("metajam_example/HBR_4_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_5_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_5_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_5_watershed <- read_excel(here::here("metajam_example/HBR_5_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_6_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_6_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_6_watershed <- read_excel(here::here("metajam_example/HBR_6_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_7_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_7_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_7_watershed <- read_excel(here::here("metajam_example/HBR_7_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_8_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_8_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_8_watershed <- read_excel(here::here("metajam_example/HBR_8_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-HBR_9_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/HBR_9_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+HBR_9_watershed <- read_excel(here::here("metajam_example/HBR_9_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-NWT_albisolu_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/NWT_albisolu_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+NWT_albisolu_watershed <- read_excel(here::here("metajam_example/NWT_albisolu_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-NWT_arikaree_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/NWT_arikaree_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+NWT_arikaree_watershed <- read_excel(here::here("metajam_example/NWT_arikaree_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-NWT_flume_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/NWT_flume_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+NWT_flume_watershed <- read_excel(here::here("metajam_example/NWT_flume_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-NWT_martinelli_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/NWT_martinelli_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+NWT_martinelli_watershed <- read_excel(here::here("metajam_example/NWT_martinelli_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
-NWT_saddle_watershed <- read_excel(here::here("R/SI_river_data/lterwg-si-export/metajam_example/NWT_saddle_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
+NWT_saddle_watershed <- read_excel(here::here("metajam_example/NWT_saddle_watershed.xlsx"), na = c("-888.88", "-888.888", "-888", "u", "NP", NULL))
 
 
-GD_ARC <- read_csv(here::here("R/SI_river_data/lterwg-si-export/metajam_example/20200911_GD_ARC.csv"))
+GD_ARC <- read_csv(here::here("metajam_example/20200911_GD_ARC.csv"))
 
-GD_NWT <- read_csv(here::here("R/SI_river_data/lterwg-si-export/metajam_example/20200911_GD_NWT.csv"))
+GD_NWT <- read_csv(here::here("metajam_example/20200911_GD_NWT.csv"))
 
 ```
+For the HBR sites the sampling date was just the month and the year. So we decided to just add a day (the 15th) to all the sampling dates from HBR sites so the dates would be homogenous with the other sites. 
 
 ```{r}
 
@@ -90,6 +96,14 @@ mutate('Sampling Date' = paste0(HBR_9_watershed$`Sampling Date`, '-15')) %>%
 
 ```
 
+Making sure the Toolik sampling dates are recognized as a date 
+
+```{r}
+
+ADC_Toolik_ALL_watershed <- ADC_Toolik_ALL_watershed %>% 
+  mutate(`Sampling Date` = as.Date(`Sampling Date`)) 
+
+```
 
 
 ```{r}
@@ -185,6 +199,12 @@ HBR_WATERSHEDS <- merge(HBR_7, HBR_9_watershed, all = TRUE) %>%
 HBR_ADC <- merge(ADC_Toolik_ALL_watershed, HBR_WATERSHEDS, all = TRUE) %>% 
   mutate(`Sampling Date` = as.Date(`Sampling Date`)) 
 
+#Inspect HBR_ADC to make sure Sampling Date still looks like a date for both sites
+
+test <- HBR_ADC %>% filter(LTER == 'HBR')
+
+#Making sure the EDI sampling dates are recognized as dates
+
 EDI_WATERSHEDS <- merge(HBR_ADC, NWT_WATERSHEDS, all =TRUE) %>% 
   mutate(`Sampling Date` = as.Date(`Sampling Date`)) 
 
@@ -200,10 +220,8 @@ ALL_WATERSHEDS <- merge(EDI_ARC, GD_NWT, all = TRUE) %>%
 ```{r}
 
 
+test_2 <- ALL_WATERSHEDS  %>% filter(LTER == 'HBR')
 
-#rearrange column order
-
-ALL_WATERSHEDS[, c("LTER", "Site/Stream Name", "Sampling Date", "Time", "Daily.Avg.Q.(Discharge)", "Instantaneous.Q.(Disahcarge)", "Stage.Height","Temp C", "Conductivity", "alkalinity", "Spec Cond", "Turbidity", "TSS", "VSS", "DSi", "TN", "DIN", "NOx", "NH4", "TP", "PO4", "SRP", "DOC", "TOC", "alkalinity", "ANC", "pH", "DIC", "Suspended Chl", "Na", "K", "Ca", "Mg", "SO4", "Cl","Comments")]
 
 ```
 
@@ -234,6 +252,10 @@ saveWorkbook(wb, "ALL_watershed.xlsx", overwrite = TRUE)
 ```{r}
 
 ALL_watershed <- read_excel(here::here("metajam_example/ALL_watershed.xlsx"))
+
+#Making sure HBR date is def correct
+
+test_3 <- ALL_watershed  %>% filter(LTER == 'HBR')
 
 ```
 
